tkklab3do4/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> <empty>
Rule 2     program -> instructions
Rule 3     instructions -> instruction
Rule 4     instructions -> instructions instruction
Rule 5     instruction -> { instructions }
Rule 6     instruction -> print_i ;
Rule 7     instruction -> assign ;
Rule 8     instruction -> while_l
Rule 9     instruction -> for_l
Rule 10    instruction -> continue_i ;
Rule 11    instruction -> break_i ;
Rule 12    instruction -> return_i ;
Rule 13    instruction -> if_i
Rule 14    expr -> mat_fun ( expr )
Rule 15    expr -> matrix
Rule 16    expr -> unary
Rule 17    expr -> expr OR expr  [precedence=left, level=4]
Rule 18    expr -> expr AND expr  [precedence=left, level=4]
Rule 19    expr -> expr XOR expr  [precedence=left, level=4]
Rule 20    expr -> expr DOTSUB expr  [precedence=left, level=5]
Rule 21    expr -> expr DOTADD expr  [precedence=left, level=5]
Rule 22    expr -> expr DOTDIV expr  [precedence=left, level=6]
Rule 23    expr -> expr DOTMUL expr  [precedence=left, level=6]
Rule 24    expr -> expr LESSEREQUAL expr  [precedence=nonassoc, level=3]
Rule 25    expr -> expr GREATEREQUAL expr  [precedence=nonassoc, level=3]
Rule 26    expr -> expr LESSER expr  [precedence=nonassoc, level=3]
Rule 27    expr -> expr GREATER expr  [precedence=nonassoc, level=3]
Rule 28    expr -> expr NOTEQUAL expr  [precedence=nonassoc, level=3]
Rule 29    expr -> expr EQUAL expr  [precedence=nonassoc, level=3]
Rule 30    expr -> expr / expr  [precedence=left, level=6]
Rule 31    expr -> expr * expr  [precedence=left, level=6]
Rule 32    expr -> expr - expr  [precedence=left, level=5]
Rule 33    expr -> expr + expr  [precedence=left, level=5]
Rule 34    expr -> ( expr )
Rule 35    expr -> var
Rule 36    expr -> FLOATNUM
Rule 37    expr -> INTNUM
Rule 38    expr -> STRING
Rule 39    var -> ID
Rule 40    var -> matrix_element
Rule 41    matrix_element -> ID [ expr , expr ]
Rule 42    assign -> var DIVASSIGN expr
Rule 43    assign -> var MULASSIGN expr
Rule 44    assign -> var SUBASSIGN expr
Rule 45    assign -> var ADDASSIGN expr
Rule 46    assign -> var = expr
Rule 47    unary -> NOT expr  [precedence=right, level=7]
Rule 48    unary -> - expr  [precedence=right, level=7]
Rule 49    matrix -> [ vectors ]
Rule 50    vectors -> vector
Rule 51    vectors -> vectors , vector
Rule 52    vector -> [ variables ]
Rule 53    variables -> variable
Rule 54    variables -> variables , variable
Rule 55    variable -> ID [ expr : ]
Rule 56    variable -> ID [ : expr ]
Rule 57    variable -> ID [ expr : expr , expr : expr ]
Rule 58    variable -> ID [ expr : expr ]
Rule 59    variable -> expr
Rule 60    mat_fun -> ONES
Rule 61    mat_fun -> EYE
Rule 62    mat_fun -> ZEROS
Rule 63    if_i -> IF ( expr ) instruction ELSE instruction  [precedence=right, level=2]
Rule 64    if_i -> IF ( expr ) instruction  [precedence=right, level=1]
Rule 65    while_l -> WHILE ( expr ) instruction
Rule 66    for_l -> FOR ID = expr : expr instruction
Rule 67    return_i -> RETURN expr
Rule 68    return_i -> RETURN
Rule 69    break_i -> BREAK
Rule 70    continue_i -> CONTINUE
Rule 71    print_i -> PRINT printargs
Rule 72    printargs -> expr
Rule 73    printargs -> expr , printargs

Terminals, with rules where they appear:

(                    : 14 34 63 64 65
)                    : 14 34 63 64 65
*                    : 31
+                    : 33
,                    : 41 51 54 57 73
-                    : 32 48
/                    : 30
:                    : 55 56 57 57 58 66
;                    : 6 7 10 11 12
=                    : 46 66
ADDASSIGN            : 45
AND                  : 18
BREAK                : 69
CONTINUE             : 70
DIVASSIGN            : 42
DOTADD               : 21
DOTDIV               : 22
DOTMUL               : 23
DOTSUB               : 20
ELSE                 : 63
EQUAL                : 29
EYE                  : 61
FLOATNUM             : 36
FOR                  : 66
GREATER              : 27
GREATEREQUAL         : 25
ID                   : 39 41 55 56 57 58 66
IF                   : 63 64
INTNUM               : 37
LESSER               : 26
LESSEREQUAL          : 24
MULASSIGN            : 43
NOT                  : 47
NOTEQUAL             : 28
ONES                 : 60
OR                   : 17
PRINT                : 71
RETURN               : 67 68
STRING               : 38
SUBASSIGN            : 44
WHILE                : 65
XOR                  : 19
ZEROS                : 62
[                    : 41 49 52 55 56 57 58
]                    : 41 49 52 55 56 57 58
error                : 
{                    : 5
}                    : 5

Nonterminals, with rules where they appear:

assign               : 7
break_i              : 11
continue_i           : 10
expr                 : 14 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 41 41 42 43 44 45 46 47 48 55 56 57 57 57 57 58 58 59 63 64 65 66 66 67 72 73
for_l                : 9
if_i                 : 13
instruction          : 3 4 63 63 64 65 66
instructions         : 2 4 5
mat_fun              : 14
matrix               : 15
matrix_element       : 40
print_i              : 6
printargs            : 71 73
program              : 0
return_i             : 12
unary                : 16
var                  : 35 42 43 44 45 46
variable             : 53 54
variables            : 52 54
vector               : 50 51
vectors              : 49 51
while_l              : 8


state 0

    (0) S' -> . program
    (1) program -> .
    (2) program -> . instructions
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction
    (5) instruction -> . { instructions }
    (6) instruction -> . print_i ;
    (7) instruction -> . assign ;
    (8) instruction -> . while_l
    (9) instruction -> . for_l
    (10) instruction -> . continue_i ;
    (11) instruction -> . break_i ;
    (12) instruction -> . return_i ;
    (13) instruction -> . if_i
    (71) print_i -> . PRINT printargs
    (42) assign -> . var DIVASSIGN expr
    (43) assign -> . var MULASSIGN expr
    (44) assign -> . var SUBASSIGN expr
    (45) assign -> . var ADDASSIGN expr
    (46) assign -> . var = expr
    (65) while_l -> . WHILE ( expr ) instruction
    (66) for_l -> . FOR ID = expr : expr instruction
    (70) continue_i -> . CONTINUE
    (69) break_i -> . BREAK
    (67) return_i -> . RETURN expr
    (68) return_i -> . RETURN
    (63) if_i -> . IF ( expr ) instruction ELSE instruction
    (64) if_i -> . IF ( expr ) instruction
    (39) var -> . ID
    (40) var -> . matrix_element
    (41) matrix_element -> . ID [ expr , expr ]
    $end            reduce using rule 1 (program -> .)
    {               shift and go to state 4
    PRINT           shift and go to state 13
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    RETURN          shift and go to state 20
    IF              shift and go to state 21
    ID              shift and go to state 17

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    print_i                        shift and go to state 5
    assign                         shift and go to state 6
    while_l                        shift and go to state 7
    for_l                          shift and go to state 8
    continue_i                     shift and go to state 9
    break_i                        shift and go to state 10
    return_i                       shift and go to state 11
    if_i                           shift and go to state 12
    var                            shift and go to state 14
    matrix_element                 shift and go to state 22

state 1

    (0) S' -> program .


state 2

    (2) program -> instructions .
    (4) instructions -> instructions . instruction
    (5) instruction -> . { instructions }
    (6) instruction -> . print_i ;
    (7) instruction -> . assign ;
    (8) instruction -> . while_l
    (9) instruction -> . for_l
    (10) instruction -> . continue_i ;
    (11) instruction -> . break_i ;
    (12) instruction -> . return_i ;
    (13) instruction -> . if_i
    (71) print_i -> . PRINT printargs
    (42) assign -> . var DIVASSIGN expr
    (43) assign -> . var MULASSIGN expr
    (44) assign -> . var SUBASSIGN expr
    (45) assign -> . var ADDASSIGN expr
    (46) assign -> . var = expr
    (65) while_l -> . WHILE ( expr ) instruction
    (66) for_l -> . FOR ID = expr : expr instruction
    (70) continue_i -> . CONTINUE
    (69) break_i -> . BREAK
    (67) return_i -> . RETURN expr
    (68) return_i -> . RETURN
    (63) if_i -> . IF ( expr ) instruction ELSE instruction
    (64) if_i -> . IF ( expr ) instruction
    (39) var -> . ID
    (40) var -> . matrix_element
    (41) matrix_element -> . ID [ expr , expr ]
    $end            reduce using rule 2 (program -> instructions .)
    {               shift and go to state 4
    PRINT           shift and go to state 13
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    RETURN          shift and go to state 20
    IF              shift and go to state 21
    ID              shift and go to state 17

    instruction                    shift and go to state 23
    print_i                        shift and go to state 5
    assign                         shift and go to state 6
    while_l                        shift and go to state 7
    for_l                          shift and go to state 8
    continue_i                     shift and go to state 9
    break_i                        shift and go to state 10
    return_i                       shift and go to state 11
    if_i                           shift and go to state 12
    var                            shift and go to state 14
    matrix_element                 shift and go to state 22

state 3

    (3) instructions -> instruction .
    {               reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    FOR             reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    }               reduce using rule 3 (instructions -> instruction .)


state 4

    (5) instruction -> { . instructions }
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction
    (5) instruction -> . { instructions }
    (6) instruction -> . print_i ;
    (7) instruction -> . assign ;
    (8) instruction -> . while_l
    (9) instruction -> . for_l
    (10) instruction -> . continue_i ;
    (11) instruction -> . break_i ;
    (12) instruction -> . return_i ;
    (13) instruction -> . if_i
    (71) print_i -> . PRINT printargs
    (42) assign -> . var DIVASSIGN expr
    (43) assign -> . var MULASSIGN expr
    (44) assign -> . var SUBASSIGN expr
    (45) assign -> . var ADDASSIGN expr
    (46) assign -> . var = expr
    (65) while_l -> . WHILE ( expr ) instruction
    (66) for_l -> . FOR ID = expr : expr instruction
    (70) continue_i -> . CONTINUE
    (69) break_i -> . BREAK
    (67) return_i -> . RETURN expr
    (68) return_i -> . RETURN
    (63) if_i -> . IF ( expr ) instruction ELSE instruction
    (64) if_i -> . IF ( expr ) instruction
    (39) var -> . ID
    (40) var -> . matrix_element
    (41) matrix_element -> . ID [ expr , expr ]
    {               shift and go to state 4
    PRINT           shift and go to state 13
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    RETURN          shift and go to state 20
    IF              shift and go to state 21
    ID              shift and go to state 17

    instructions                   shift and go to state 24
    instruction                    shift and go to state 3
    print_i                        shift and go to state 5
    assign                         shift and go to state 6
    while_l                        shift and go to state 7
    for_l                          shift and go to state 8
    continue_i                     shift and go to state 9
    break_i                        shift and go to state 10
    return_i                       shift and go to state 11
    if_i                           shift and go to state 12
    var                            shift and go to state 14
    matrix_element                 shift and go to state 22

state 5

    (6) instruction -> print_i . ;
    ;               shift and go to state 25


state 6

    (7) instruction -> assign . ;
    ;               shift and go to state 26


state 7

    (8) instruction -> while_l .
    {               reduce using rule 8 (instruction -> while_l .)
    PRINT           reduce using rule 8 (instruction -> while_l .)
    WHILE           reduce using rule 8 (instruction -> while_l .)
    FOR             reduce using rule 8 (instruction -> while_l .)
    CONTINUE        reduce using rule 8 (instruction -> while_l .)
    BREAK           reduce using rule 8 (instruction -> while_l .)
    RETURN          reduce using rule 8 (instruction -> while_l .)
    IF              reduce using rule 8 (instruction -> while_l .)
    ID              reduce using rule 8 (instruction -> while_l .)
    $end            reduce using rule 8 (instruction -> while_l .)
    }               reduce using rule 8 (instruction -> while_l .)
    ELSE            reduce using rule 8 (instruction -> while_l .)


state 8

    (9) instruction -> for_l .
    {               reduce using rule 9 (instruction -> for_l .)
    PRINT           reduce using rule 9 (instruction -> for_l .)
    WHILE           reduce using rule 9 (instruction -> for_l .)
    FOR             reduce using rule 9 (instruction -> for_l .)
    CONTINUE        reduce using rule 9 (instruction -> for_l .)
    BREAK           reduce using rule 9 (instruction -> for_l .)
    RETURN          reduce using rule 9 (instruction -> for_l .)
    IF              reduce using rule 9 (instruction -> for_l .)
    ID              reduce using rule 9 (instruction -> for_l .)
    $end            reduce using rule 9 (instruction -> for_l .)
    }               reduce using rule 9 (instruction -> for_l .)
    ELSE            reduce using rule 9 (instruction -> for_l .)


state 9

    (10) instruction -> continue_i . ;
    ;               shift and go to state 27


state 10

    (11) instruction -> break_i . ;
    ;               shift and go to state 28


state 11

    (12) instruction -> return_i . ;
    ;               shift and go to state 29


state 12

    (13) instruction -> if_i .
    {               reduce using rule 13 (instruction -> if_i .)
    PRINT           reduce using rule 13 (instruction -> if_i .)
    WHILE           reduce using rule 13 (instruction -> if_i .)
    FOR             reduce using rule 13 (instruction -> if_i .)
    CONTINUE        reduce using rule 13 (instruction -> if_i .)
    BREAK           reduce using rule 13 (instruction -> if_i .)
    RETURN          reduce using rule 13 (instruction -> if_i .)
    IF              reduce using rule 13 (instruction -> if_i .)
    ID              reduce using rule 13 (instruction -> if_i .)
    $end            reduce using rule 13 (instruction -> if_i .)
    }               reduce using rule 13 (instruction -> if_i .)
    ELSE            reduce using rule 13 (instruction -> if_i .)


state 13

    (71) print_i -> PRINT . printargs
    (72) printargs -> . expr
    (73) printargs -> . expr , printargs
    (14) expr -> . mat_fun ( expr )
    (15) expr -> . matrix
    (16) expr -> . unary
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr XOR expr
    (20) expr -> . expr DOTSUB expr
    (21) expr -> . expr DOTADD expr
    (22) expr -> . expr DOTDIV expr
    (23) expr -> . expr DOTMUL expr
    (24) expr -> . expr LESSEREQUAL expr
    (25) expr -> . expr GREATEREQUAL expr
    (26) expr -> . expr LESSER expr
    (27) expr -> . expr GREATER expr
    (28) expr -> . expr NOTEQUAL expr
    (29) expr -> . expr EQUAL expr
    (30) expr -> . expr / expr
    (31) expr -> . expr * expr
    (32) expr -> . expr - expr
    (33) expr -> . expr + expr
    (34) expr -> . ( expr )
    (35) expr -> . var
    (36) expr -> . FLOATNUM
    (37) expr -> . INTNUM
    (38) expr -> . STRING
    (60) mat_fun -> . ONES
    (61) mat_fun -> . EYE
    (62) mat_fun -> . ZEROS
    (49) matrix -> . [ vectors ]
    (47) unary -> . NOT expr
    (48) unary -> . - expr
    (39) var -> . ID
    (40) var -> . matrix_element
    (41) matrix_element -> . ID [ expr , expr ]
    (               shift and go to state 33
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    STRING          shift and go to state 40
    ONES            shift and go to state 41
    EYE             shift and go to state 42
    ZEROS           shift and go to state 43
    [               shift and go to state 44
    NOT             shift and go to state 45
    -               shift and go to state 36
    ID              shift and go to state 17

    printargs                      shift and go to state 30
    expr                           shift and go to state 31
    mat_fun                        shift and go to state 32
    matrix                         shift and go to state 34
    unary                          shift and go to state 35
    var                            shift and go to state 37
    matrix_element                 shift and go to state 22

state 14

    (42) assign -> var . DIVASSIGN expr
    (43) assign -> var . MULASSIGN expr
    (44) assign -> var . SUBASSIGN expr
    (45) assign -> var . ADDASSIGN expr
    (46) assign -> var . = expr
    DIVASSIGN       shift and go to state 46
    MULASSIGN       shift and go to state 47
    SUBASSIGN       shift and go to state 48
    ADDASSIGN       shift and go to state 49
    =               shift and go to state 50


state 15

    (65) while_l -> WHILE . ( expr ) instruction
    (               shift and go to state 51


state 16

    (66) for_l -> FOR . ID = expr : expr instruction
    ID              shift and go to state 52


state 17

    (39) var -> ID .
    (41) matrix_element -> ID . [ expr , expr ]
    DIVASSIGN       reduce using rule 39 (var -> ID .)
    MULASSIGN       reduce using rule 39 (var -> ID .)
    SUBASSIGN       reduce using rule 39 (var -> ID .)
    ADDASSIGN       reduce using rule 39 (var -> ID .)
    =               reduce using rule 39 (var -> ID .)
    ,               reduce using rule 39 (var -> ID .)
    OR              reduce using rule 39 (var -> ID .)
    AND             reduce using rule 39 (var -> ID .)
    XOR             reduce using rule 39 (var -> ID .)
    DOTSUB          reduce using rule 39 (var -> ID .)
    DOTADD          reduce using rule 39 (var -> ID .)
    DOTDIV          reduce using rule 39 (var -> ID .)
    DOTMUL          reduce using rule 39 (var -> ID .)
    LESSEREQUAL     reduce using rule 39 (var -> ID .)
    GREATEREQUAL    reduce using rule 39 (var -> ID .)
    LESSER          reduce using rule 39 (var -> ID .)
    GREATER         reduce using rule 39 (var -> ID .)
    NOTEQUAL        reduce using rule 39 (var -> ID .)
    EQUAL           reduce using rule 39 (var -> ID .)
    /               reduce using rule 39 (var -> ID .)
    *               reduce using rule 39 (var -> ID .)
    -               reduce using rule 39 (var -> ID .)
    +               reduce using rule 39 (var -> ID .)
    ;               reduce using rule 39 (var -> ID .)
    )               reduce using rule 39 (var -> ID .)
    ]               reduce using rule 39 (var -> ID .)
    :               reduce using rule 39 (var -> ID .)
    {               reduce using rule 39 (var -> ID .)
    PRINT           reduce using rule 39 (var -> ID .)
    WHILE           reduce using rule 39 (var -> ID .)
    FOR             reduce using rule 39 (var -> ID .)
    CONTINUE        reduce using rule 39 (var -> ID .)
    BREAK           reduce using rule 39 (var -> ID .)
    RETURN          reduce using rule 39 (var -> ID .)
    IF              reduce using rule 39 (var -> ID .)
    ID              reduce using rule 39 (var -> ID .)
    [               shift and go to state 53


state 18

    (70) continue_i -> CONTINUE .
    ;               reduce using rule 70 (continue_i -> CONTINUE .)


state 19

    (69) break_i -> BREAK .
    ;               reduce using rule 69 (break_i -> BREAK .)


state 20

    (67) return_i -> RETURN . expr
    (68) return_i -> RETURN .
    (14) expr -> . mat_fun ( expr )
    (15) expr -> . matrix
    (16) expr -> . unary
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr XOR expr
    (20) expr -> . expr DOTSUB expr
    (21) expr -> . expr DOTADD expr
    (22) expr -> . expr DOTDIV expr
    (23) expr -> . expr DOTMUL expr
    (24) expr -> . expr LESSEREQUAL expr
    (25) expr -> . expr GREATEREQUAL expr
    (26) expr -> . expr LESSER expr
    (27) expr -> . expr GREATER expr
    (28) expr -> . expr NOTEQUAL expr
    (29) expr -> . expr EQUAL expr
    (30) expr -> . expr / expr
    (31) expr -> . expr * expr
    (32) expr -> . expr - expr
    (33) expr -> . expr + expr
    (34) expr -> . ( expr )
    (35) expr -> . var
    (36) expr -> . FLOATNUM
    (37) expr -> . INTNUM
    (38) expr -> . STRING
    (60) mat_fun -> . ONES
    (61) mat_fun -> . EYE
    (62) mat_fun -> . ZEROS
    (49) matrix -> . [ vectors ]
    (47) unary -> . NOT expr
    (48) unary -> . - expr
    (39) var -> . ID
    (40) var -> . matrix_element
    (41) matrix_element -> . ID [ expr , expr ]
    ;               reduce using rule 68 (return_i -> RETURN .)
    (               shift and go to state 33
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    STRING          shift and go to state 40
    ONES            shift and go to state 41
    EYE             shift and go to state 42
    ZEROS           shift and go to state 43
    [               shift and go to state 44
    NOT             shift and go to state 45
    -               shift and go to state 36
    ID              shift and go to state 17

    expr                           shift and go to state 54
    mat_fun                        shift and go to state 32
    matrix                         shift and go to state 34
    unary                          shift and go to state 35
    var                            shift and go to state 37
    matrix_element                 shift and go to state 22

state 21

    (63) if_i -> IF . ( expr ) instruction ELSE instruction
    (64) if_i -> IF . ( expr ) instruction
    (               shift and go to state 55


state 22

    (40) var -> matrix_element .
    DIVASSIGN       reduce using rule 40 (var -> matrix_element .)
    MULASSIGN       reduce using rule 40 (var -> matrix_element .)
    SUBASSIGN       reduce using rule 40 (var -> matrix_element .)
    ADDASSIGN       reduce using rule 40 (var -> matrix_element .)
    =               reduce using rule 40 (var -> matrix_element .)
    ,               reduce using rule 40 (var -> matrix_element .)
    OR              reduce using rule 40 (var -> matrix_element .)
    AND             reduce using rule 40 (var -> matrix_element .)
    XOR             reduce using rule 40 (var -> matrix_element .)
    DOTSUB          reduce using rule 40 (var -> matrix_element .)
    DOTADD          reduce using rule 40 (var -> matrix_element .)
    DOTDIV          reduce using rule 40 (var -> matrix_element .)
    DOTMUL          reduce using rule 40 (var -> matrix_element .)
    LESSEREQUAL     reduce using rule 40 (var -> matrix_element .)
    GREATEREQUAL    reduce using rule 40 (var -> matrix_element .)
    LESSER          reduce using rule 40 (var -> matrix_element .)
    GREATER         reduce using rule 40 (var -> matrix_element .)
    NOTEQUAL        reduce using rule 40 (var -> matrix_element .)
    EQUAL           reduce using rule 40 (var -> matrix_element .)
    /               reduce using rule 40 (var -> matrix_element .)
    *               reduce using rule 40 (var -> matrix_element .)
    -               reduce using rule 40 (var -> matrix_element .)
    +               reduce using rule 40 (var -> matrix_element .)
    ;               reduce using rule 40 (var -> matrix_element .)
    )               reduce using rule 40 (var -> matrix_element .)
    ]               reduce using rule 40 (var -> matrix_element .)
    :               reduce using rule 40 (var -> matrix_element .)
    {               reduce using rule 40 (var -> matrix_element .)
    PRINT           reduce using rule 40 (var -> matrix_element .)
    WHILE           reduce using rule 40 (var -> matrix_element .)
    FOR             reduce using rule 40 (var -> matrix_element .)
    CONTINUE        reduce using rule 40 (var -> matrix_element .)
    BREAK           reduce using rule 40 (var -> matrix_element .)
    RETURN          reduce using rule 40 (var -> matrix_element .)
    IF              reduce using rule 40 (var -> matrix_element .)
    ID              reduce using rule 40 (var -> matrix_element .)


state 23

    (4) instructions -> instructions instruction .
    {               reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 24

    (5) instruction -> { instructions . }
    (4) instructions -> instructions . instruction
    (5) instruction -> . { instructions }
    (6) instruction -> . print_i ;
    (7) instruction -> . assign ;
    (8) instruction -> . while_l
    (9) instruction -> . for_l
    (10) instruction -> . continue_i ;
    (11) instruction -> . break_i ;
    (12) instruction -> . return_i ;
    (13) instruction -> . if_i
    (71) print_i -> . PRINT printargs
    (42) assign -> . var DIVASSIGN expr
    (43) assign -> . var MULASSIGN expr
    (44) assign -> . var SUBASSIGN expr
    (45) assign -> . var ADDASSIGN expr
    (46) assign -> . var = expr
    (65) while_l -> . WHILE ( expr ) instruction
    (66) for_l -> . FOR ID = expr : expr instruction
    (70) continue_i -> . CONTINUE
    (69) break_i -> . BREAK
    (67) return_i -> . RETURN expr
    (68) return_i -> . RETURN
    (63) if_i -> . IF ( expr ) instruction ELSE instruction
    (64) if_i -> . IF ( expr ) instruction
    (39) var -> . ID
    (40) var -> . matrix_element
    (41) matrix_element -> . ID [ expr , expr ]
    }               shift and go to state 56
    {               shift and go to state 4
    PRINT           shift and go to state 13
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    RETURN          shift and go to state 20
    IF              shift and go to state 21
    ID              shift and go to state 17

    instruction                    shift and go to state 23
    print_i                        shift and go to state 5
    assign                         shift and go to state 6
    while_l                        shift and go to state 7
    for_l                          shift and go to state 8
    continue_i                     shift and go to state 9
    break_i                        shift and go to state 10
    return_i                       shift and go to state 11
    if_i                           shift and go to state 12
    var                            shift and go to state 14
    matrix_element                 shift and go to state 22

state 25

    (6) instruction -> print_i ; .
    {               reduce using rule 6 (instruction -> print_i ; .)
    PRINT           reduce using rule 6 (instruction -> print_i ; .)
    WHILE           reduce using rule 6 (instruction -> print_i ; .)
    FOR             reduce using rule 6 (instruction -> print_i ; .)
    CONTINUE        reduce using rule 6 (instruction -> print_i ; .)
    BREAK           reduce using rule 6 (instruction -> print_i ; .)
    RETURN          reduce using rule 6 (instruction -> print_i ; .)
    IF              reduce using rule 6 (instruction -> print_i ; .)
    ID              reduce using rule 6 (instruction -> print_i ; .)
    $end            reduce using rule 6 (instruction -> print_i ; .)
    }               reduce using rule 6 (instruction -> print_i ; .)
    ELSE            reduce using rule 6 (instruction -> print_i ; .)


state 26

    (7) instruction -> assign ; .
    {               reduce using rule 7 (instruction -> assign ; .)
    PRINT           reduce using rule 7 (instruction -> assign ; .)
    WHILE           reduce using rule 7 (instruction -> assign ; .)
    FOR             reduce using rule 7 (instruction -> assign ; .)
    CONTINUE        reduce using rule 7 (instruction -> assign ; .)
    BREAK           reduce using rule 7 (instruction -> assign ; .)
    RETURN          reduce using rule 7 (instruction -> assign ; .)
    IF              reduce using rule 7 (instruction -> assign ; .)
    ID              reduce using rule 7 (instruction -> assign ; .)
    $end            reduce using rule 7 (instruction -> assign ; .)
    }               reduce using rule 7 (instruction -> assign ; .)
    ELSE            reduce using rule 7 (instruction -> assign ; .)


state 27

    (10) instruction -> continue_i ; .
    {               reduce using rule 10 (instruction -> continue_i ; .)
    PRINT           reduce using rule 10 (instruction -> continue_i ; .)
    WHILE           reduce using rule 10 (instruction -> continue_i ; .)
    FOR             reduce using rule 10 (instruction -> continue_i ; .)
    CONTINUE        reduce using rule 10 (instruction -> continue_i ; .)
    BREAK           reduce using rule 10 (instruction -> continue_i ; .)
    RETURN          reduce using rule 10 (instruction -> continue_i ; .)
    IF              reduce using rule 10 (instruction -> continue_i ; .)
    ID              reduce using rule 10 (instruction -> continue_i ; .)
    $end            reduce using rule 10 (instruction -> continue_i ; .)
    }               reduce using rule 10 (instruction -> continue_i ; .)
    ELSE            reduce using rule 10 (instruction -> continue_i ; .)


state 28

    (11) instruction -> break_i ; .
    {               reduce using rule 11 (instruction -> break_i ; .)
    PRINT           reduce using rule 11 (instruction -> break_i ; .)
    WHILE           reduce using rule 11 (instruction -> break_i ; .)
    FOR             reduce using rule 11 (instruction -> break_i ; .)
    CONTINUE        reduce using rule 11 (instruction -> break_i ; .)
    BREAK           reduce using rule 11 (instruction -> break_i ; .)
    RETURN          reduce using rule 11 (instruction -> break_i ; .)
    IF              reduce using rule 11 (instruction -> break_i ; .)
    ID              reduce using rule 11 (instruction -> break_i ; .)
    $end            reduce using rule 11 (instruction -> break_i ; .)
    }               reduce using rule 11 (instruction -> break_i ; .)
    ELSE            reduce using rule 11 (instruction -> break_i ; .)


state 29

    (12) instruction -> return_i ; .
    {               reduce using rule 12 (instruction -> return_i ; .)
    PRINT           reduce using rule 12 (instruction -> return_i ; .)
    WHILE           reduce using rule 12 (instruction -> return_i ; .)
    FOR             reduce using rule 12 (instruction -> return_i ; .)
    CONTINUE        reduce using rule 12 (instruction -> return_i ; .)
    BREAK           reduce using rule 12 (instruction -> return_i ; .)
    RETURN          reduce using rule 12 (instruction -> return_i ; .)
    IF              reduce using rule 12 (instruction -> return_i ; .)
    ID              reduce using rule 12 (instruction -> return_i ; .)
    $end            reduce using rule 12 (instruction -> return_i ; .)
    }               reduce using rule 12 (instruction -> return_i ; .)
    ELSE            reduce using rule 12 (instruction -> return_i ; .)


state 30

    (71) print_i -> PRINT printargs .
    ;               reduce using rule 71 (print_i -> PRINT printargs .)


state 31

    (72) printargs -> expr .
    (73) printargs -> expr . , printargs
    (17) expr -> expr . OR expr
    (18) expr -> expr . AND expr
    (19) expr -> expr . XOR expr
    (20) expr -> expr . DOTSUB expr
    (21) expr -> expr . DOTADD expr
    (22) expr -> expr . DOTDIV expr
    (23) expr -> expr . DOTMUL expr
    (24) expr -> expr . LESSEREQUAL expr
    (25) expr -> expr . GREATEREQUAL expr
    (26) expr -> expr . LESSER expr
    (27) expr -> expr . GREATER expr
    (28) expr -> expr . NOTEQUAL expr
    (29) expr -> expr . EQUAL expr
    (30) expr -> expr . / expr
    (31) expr -> expr . * expr
    (32) expr -> expr . - expr
    (33) expr -> expr . + expr
    ;               reduce using rule 72 (printargs -> expr .)
    ,               shift and go to state 57
    OR              shift and go to state 58
    AND             shift and go to state 59
    XOR             shift and go to state 60
    DOTSUB          shift and go to state 61
    DOTADD          shift and go to state 62
    DOTDIV          shift and go to state 63
    DOTMUL          shift and go to state 64
    LESSEREQUAL     shift and go to state 65
    GREATEREQUAL    shift and go to state 66
    LESSER          shift and go to state 67
    GREATER         shift and go to state 68
    NOTEQUAL        shift and go to state 69
    EQUAL           shift and go to state 70
    /               shift and go to state 71
    *               shift and go to state 72
    -               shift and go to state 73
    +               shift and go to state 74


state 32

    (14) expr -> mat_fun . ( expr )
    (               shift and go to state 75


state 33

    (34) expr -> ( . expr )
    (14) expr -> . mat_fun ( expr )
    (15) expr -> . matrix
    (16) expr -> . unary
    (17) expr -> . expr OR expr
    (18) expr -> . expr AND expr
    (19) expr -> . expr XOR expr
    (20) expr -> . expr DOTSUB expr
    (21) expr -> . expr DOTADD expr
    (22) expr -> . expr DOTDIV expr
    (23) expr -> . expr DOTMUL expr
    (24) expr -> . expr LESSEREQUAL expr
